force-app/main/default/objects/Sales_Compensation__c/Sales_Compensation__c.object-meta.xml
<CustomObject>
    <description>Stores inbound sales compensation transactions, calculated commission values, and webhook delivery audit details.</description>
    <label>Sales Compensation</label>
    <nameField>
        <displayFormat>COMP-{000000}</displayFormat>
        <label>Compensation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Compensations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>