force-app/main/default/objects/Sales_Compensation__c/fields/Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Accelerator__c</fullName>
    <label>Accelerator</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>