force-app/main/default/objects/Sales_Compensation__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>