force-app/main/default/objects/Sales_Compensation__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Commission rate expressed as a decimal, for example 0.10 for 10%.</description>
    <label>Commission Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>