force-app/main/default/objects/Sales_Compensation__c/fields/Compensation_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Plan_Id__c</fullName>
    <label>Compensation Plan ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>