force-app/main/default/objects/Sales_Compensation__c/fields/Compensation_Plan_Version__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Plan_Version__c</fullName>
    <label>Compensation Plan Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>