force-app/main/default/objects/Sales_Compensation__c/fields/Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount__c</fullName>
    <label>Eligible Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>