force-app/main/default/objects/Sales_Compensation__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPPORTUNITY_CLOSED_WON</fullName>
            </value>
            <value>
                <fullName>OPPORTUNITY_CLOSED_LOST</fullName>
            </value>
            <value>
                <fullName>OPPORTUNITY_UPDATED</fullName>
            </value>
            <value>
                <fullName>OPPORTUNITY_CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>