force-app/main/default/objects/Sales_Compensation__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Idempotency-Key header used to prevent duplicate compensation transactions.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>