force-app/main/default/objects/Sales_Compensation__c/fields/Last_Webhook_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Attempt_At__c</fullName>
    <label>Last Webhook Attempt At</label>
    <type>DateTime</type>
</CustomField>