force-app/main/default/objects/Sales_Compensation__c/fields/Last_Webhook_Response__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Response__c</fullName>
    <label>Last Webhook Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>