force-app/main/default/objects/Sales_Compensation__c/fields/Last_Webhook_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Response_Code__c</fullName>
    <label>Last Webhook Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>