force-app/main/default/objects/Sales_Compensation__c/fields/Next_Webhook_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Webhook_Attempt_At__c</fullName>
    <label>Next Webhook Attempt At</label>
    <type>DateTime</type>
</CustomField>