force-app/main/default/objects/Sales_Compensation__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>Timestamp when the source event occurred.</description>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>