force-app/main/default/objects/Sales_Compensation__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <label>Opportunity Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>