force-app/main/default/objects/Sales_Compensation__c/fields/Opportunity_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_External_Id__c</fullName>
    <label>Opportunity External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>