force-app/main/default/objects/Sales_Compensation__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PROSPECTING</fullName>
            </value>
            <value>
                <fullName>QUALIFICATION</fullName>
            </value>
            <value>
                <fullName>PROPOSAL</fullName>
            </value>
            <value>
                <fullName>NEGOTIATION</fullName>
            </value>
            <value>
                <fullName>CLOSED_WON</fullName>
            </value>
            <value>
                <fullName>CLOSED_LOST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>