force-app/main/default/objects/Sales_Compensation__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>