force-app/main/default/objects/Sales_Compensation__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONTH</fullName>
                <default>true</default>
                <label>MONTH</label>
            </value>
            <value>
                <fullName>QUARTER</fullName>
            </value>
            <value>
                <fullName>YEAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>