force-app/main/default/objects/Sales_Compensation__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <label>Sales Rep Email</label>
    <type>Email</type>
</CustomField>