force-app/main/default/objects/Sales_Compensation__c/fields/Sales_Rep_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_External_Id__c</fullName>
    <label>Sales Rep External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>