force-app/main/default/objects/Sales_Compensation__c/fields/Sales_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Role__c</fullName>
    <label>Sales Rep Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT_EXECUTIVE</fullName>
            </value>
            <value>
                <fullName>SALES_DEVELOPMENT_REP</fullName>
            </value>
            <value>
                <fullName>ACCOUNT_MANAGER</fullName>
            </value>
            <value>
                <fullName>SALES_MANAGER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>