force-app/main/default/objects/Sales_Compensation__c/fields/Source_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity_Id__c</fullName>
    <label>Source Opportunity ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>