force-app/main/default/objects/Sales_Compensation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Compensation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CALCULATING</fullName>
            </value>
            <value>
                <fullName>CALCULATED</fullName>
                <default>true</default>
                <label>CALCULATED</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>REVERSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>