force-app/main/default/objects/Sales_Compensation__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Unique transaction identifier supplied in the calculation request.</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>