force-app/main/default/objects/Sales_Compensation__c/fields/Webhook_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Webhook Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>