force-app/main/default/objects/Sales_Compensation__c/fields/Webhook_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Event_Id__c</fullName>
    <description>Unique event ID sent to the webhook receiver.</description>
    <externalId>true</externalId>
    <label>Webhook Event ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>