force-app/main/default/objects/Sales_Compensation__c/fields/Webhook_Payload__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Payload__c</fullName>
    <description>JSON payload sent to the configured webhook endpoint.</description>
    <label>Webhook Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>