force-app/main/default/objects/Sales_Compensation__c/fields/Webhook_Status__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Status__c</fullName>
    <label>Webhook Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>RETRYING</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>